Fix code readability
Added the missing title names for the announcement grids.
Added img alt text so they explain what the imgs are.
Changes some class name from 2 words to adding dash in between.

--- a/styles.css
+++ b/styles.css
@@ -23,31 +23,31 @@ img {
     row-gap: 40px;
     font-weight: bold;
 }
-.dashboardpic{
+.dashboard-pic{
     display: grid;
-    grid-area: 1/1/2/2;
+    grid-area: 1 / 1 / 2 / 2;
     place-items: center;
 }
-.dashboardtext{
+.dashboard-text{
     font-weight: bold;
     display: grid;
     align-items: center;
     grid-area: 1 / 2 / 2/ 3;
 }
-.menupic{
+.menu-picture{
     display: grid;
-    grid-area: 2/1/3/2;
+    grid-area: 2 / 1 / 3 / 2;
     place-items: center;
 }
-.menutext{
+.menu-text{
     display: grid;
     align-items: center;
     font-size: 25px;
 }
-.settingpic{
+.setting-icons{
     display: grid;
     place-items: center;
-    grid-area: 3/1/4/2;
+    grid-area: 3 / 1 / 4 / 2;
 }
 .settingtext{
     display: grid;
@@ -61,7 +61,7 @@ img {
     align-items: center;
 }
 
-.searchbar{
+.search-bar{
     display: flex;
     gap: 20px;
     padding-left: 50px;
@@ -138,7 +138,7 @@ img {
   overflow: hidden;  
 }
 
-.cat{
+.profile-pic{
     width: 85%;
     height: 85%;
     object-fit: contain;
@@ -191,7 +191,7 @@ button {
 .cards{
     grid-row: 2;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     padding-right: 20px;
@@ -225,7 +225,7 @@ button {
 
 .ann-cards{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
     background-color: #FFFFFF;
     text-align: left;
     border-radius: 20px;
